# furaffinity-account-migrator

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.devcontainer/: devcontainer.json
src/: App.tsx  index.ts  login.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src/context/: accounts.ts  accounts.tsx
src/fa/: errors.ts  index.ts
src/login/: index.tsx  instructions.tsx
